# haskell-99

./: .gitignore  .travis.yml  Graph.hs  LICENSE  MultiTree.hs  Number.hs  README.md  Tree.hs  WeightedGraph.hs  default.nix  haskell99.cabal  problem01.hs  problem02.hs  problem03.hs  problem04.hs  problem05.hs  problem06.hs  problem07.hs  problem08.hs  problem09.hs  problem10.hs  problem11.hs  problem12.hs  problem13.hs  problem14.hs  problem15.hs  problem16.hs  problem17.hs  problem18.hs  problem19.hs  problem20.hs  problem21.hs  problem22.hs  problem23.hs  problem24.hs  problem25.hs  problem26.hs  problem27.hs  problem28.hs  problem31.hs  (+57 more)
app/problem01/: Main.hs
app/problem02/: Main.hs
app/problem03/: Main.hs
app/problem04/: Main.hs
app/problem05/: Main.hs
app/problem06/: Main.hs
app/problem07/: Main.hs
app/problem08/: Main.hs
app/problem09/: Main.hs
app/problem10/: Main.hs
app/problem11/: Main.hs
app/problem12/: Main.hs
app/problem13/: Main.hs
app/problem14/: Main.hs
app/problem15/: Main.hs
app/problem16/: Main.hs
app/problem17/: Main.hs
app/problem18/: Main.hs
app/problem19/: Main.hs
app/problem20/: Main.hs
app/problem21/: Main.hs
app/problem22/: Main.hs
app/problem23/: Main.hs
app/problem24/: Main.hs
app/problem25/: Main.hs
app/problem26/: Main.hs
app/problem27/: Main.hs
app/problem28/: Main.hs
app/problem31/: Main.hs
app/problem32/: Main.hs
app/problem33/: Main.hs
app/problem34/: Main.hs
app/problem35/: Main.hs
app/problem36/: Main.hs
app/problem37/: Main.hs
app/problem39/: Main.hs
app/problem40/: Main.hs
app/problem41/: Main.hs
app/problem46/: Main.hs
app/problem47/: Main.hs
app/problem48/: Main.hs
app/problem50/: Main.hs
app/problem55/: Main.hs
app/problem56/: Main.hs
app/problem57/: Main.hs
app/problem58/: Main.hs
app/problem59/: Main.hs
app/problem60/: Main.hs
app/problem61/: Main.hs
app/problem61a/: Main.hs
app/problem62/: Main.hs
app/problem62b/: Main.hs
app/problem63/: Main.hs
app/problem64/: Main.hs
app/problem65/: Main.hs
app/problem66/: Main.hs
app/problem67a/: Main.hs
app/problem68/: Main.hs
app/problem69/: Main.hs
app/problem70/: Main.hs
app/problem70c/: Main.hs
app/problem71/: Main.hs
app/problem72/: Main.hs
app/problem73/: Main.hs
app/problem80/: Main.hs
app/problem81/: Main.hs
app/problem82/: Main.hs
app/problem83/: Main.hs
app/problem84/: Main.hs
app/problem85/: Main.hs
app/problem86/: Main.hs
app/problem87/: Main.hs
app/problem88/: Main.hs
app/problem89/: Main.hs
app/problem90/: Main.hs
app/problem91/: Main.hs
app/problem92/: Main.hs
app/problem93/: Main.hs
app/problem94/: Main.hs
app/problem95/: Main.hs
app/problem96/: Main.hs
app/problem97/: Main.hs
app/problem98/: Main.hs
app/problem99/: Main.hs
nix/: sources.json
src/: Graph.hs  Logic.hs  MultiTree.hs  Number.hs  Tree.hs  WeightedGraph.hs
